--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <h1 class="title">GPSの課題</h1>
     <h2>課題：GPSの正確性が落ちてしまうこと</h2>
   <h3>要因:電波を遮断、反射してしまう場所、悪天候、GPS衛星による誤差</h3>
-  <h4>陰によって電波が届きにくくなる場所[1]　　　　磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]</h4>
-  <p>・ビルや木立の陰　　　　　　　　　　　　　　・地下
-  <p>・トンネルの中　　　　　　　　　　　　　　　・密集した樹木の間
-　<p>・屋内　　　　　　　　　　　　　　　　　　　・高架の下
-  <p>・高層ビルの間　　　　　　　　　　　　　　　・高圧電線の近く
-　<p>・建物の間の狭い道路　　　　　　　　　　　　・近くに1.5GHz体の携帯電話などの同じ周波数帯の電波を発生するものがある場所
+  <h4>陰によって電波が届きにくくなる場所[1]　　　　</h4>
+  <p>・ビルや木立の陰　　　　　　　　　　　　　　
+  <p>・トンネルの中　　　　　　　　　　　　　　　
+　<p>・屋内　　　　　　　　　　　　　　　　　　　
+  <p>・高層ビルの間　　　　　　　　　　　　　　　
+　<p>・建物の間の狭い道路　　　　　　　　　　　　
+  <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]</h4>
+  　 ・地下
+  　 ・密集した樹木の間
+　　　・高架の下
+  　　・高圧電線の近く
+　　　・近くに1.5GHz体の携帯電話などの同じ周波数帯の電波を発生するものがある場所
   <p>GPSは天気が悪い時は精度が落ちてしまう[2]。</p>
   <p>GPS衛星により約10ｍの誤差を生じる[1]。</p>
   <h2>課題：GPSを使用する時に電池の消費が激しいこと</h2>
