--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <p>・高層ビルの間　　　　　　　　　　　　　　　
 　<p>・建物の間の狭い道路　　　　　　　　　　　　
   <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]</h4>
-  　 ・地下
-  　 ・密集した樹木の間
-　　　・高架の下
-  　　・高圧電線の近く
-　　　・近くに1.5GHz体の携帯電話などの同じ周波数帯の電波を発生するものがある場所
+  　 <p>・地下
+  　 <p>・密集した樹木の間
+　　 <p>・高架の下
+  　 <p>・高圧電線の近く
+　　 <p>・近くに1.5GHz体の携帯電話などの同じ周波数帯の電波を発生するものがある場所
   <p>GPSは天気が悪い時は精度が落ちてしまう[2]。</p>
   <p>GPS衛星により約10ｍの誤差を生じる[1]。</p>
   <h2>課題：GPSを使用する時に電池の消費が激しいこと</h2>
