--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p>[1] SONY ヘルプガイド　GPSについて　2014　 https://www.sony.jp/ServiceArea/impdf/pdf/45306860M.w-JP/jp/contents/TP0000507871.html</p>
 [2] MAMORIO Biz 　GPSタグの欠点　BluetoothタグやBeaconとの違いとは？　2020
 https://mamorio.biz/blog/gps-and-bluetooth
-<body style="background-color:FFFF66;">
+<body style="background-color:＃FFFF66;">
 
 
  </body>
