--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Progate</title>
   </head>
   <body>
+    <body style="background-color:orange#ffa500">
     <h1 class="title">GPSの課題</h1>
     <h2>課題：GPSの正確性が落ちてしまうこと</h2>
   <h3>要因:電波を遮断、反射してしまう場所、悪天候、GPS衛星による誤差</h3>
@@ -30,7 +31,7 @@
 <p>[1] SONY ヘルプガイド　GPSについて　2014　 https://www.sony.jp/ServiceArea/impdf/pdf/45306860M.w-JP/jp/contents/TP0000507871.html</p>
 [2] MAMORIO Biz 　GPSタグの欠点　BluetoothタグやBeaconとの違いとは？　2020
 https://mamorio.biz/blog/gps-and-bluetooth
-   <body style="background-color:＃FFFF66;">
+   
 
 
  </body>
