--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <p>・高層ビルの間　　　　　　　　　　　　　　　
 　<p>・建物の間の狭い道路
   <p>・密集した樹木の間
+    <div style="text-align: right">
+  <img src="">
+</div>
   <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]    </h4>
   <p>・地下
   <p>・高架の下
