--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 　<p>・建物の間の狭い道路
   <p>・密集した樹木の間
     <div style="text-align: right">
-  <img src="">
+  <img src="https://github.com/wanti-mu4/Watanabe-Mao/blob/main/building_1.png?raw=true">
 </div>
   <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]    </h4>
   <p>・地下
