--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1 class="title">GPSの課題<color="#000099"></h1>
+    <h1 class="title">GPSの課題</h1>
     <h2>課題：GPSの正確性が落ちてしまうこと</h2>
   <h3>要因:電波を遮断、反射してしまう場所、悪天候、GPS衛星による誤差</h3>
   <h4>陰によって電波が届きにくくなる場所[1]　　　　</h4>
