--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <h2>課題：GPSの正確性が落ちてしまうこと</h2>
   <h3>要因:電波を遮断、反射してしまう場所、悪天候、GPS衛星による誤差</h3>
   <h4>陰によって電波が届きにくくなる場所[1]　　　　</h4>
-  <p>・ビルや木立の陰　　<div style="text-align: right">
-  <p>・トンネルの中     <img src="https://github.com/wanti-mu4/Watanabe-Mao/blob/main/building_1.png?raw=true">
-  <p>・屋内　            </div>　　　　　　　　　　　　
+  <p>・ビルや木立の陰　　
+  <p>・トンネルの中    
+  <p>・屋内　           　　　　　　　　　　　
   <p>・高層ビルの間　　　　　　　　　　　　　　　
 　<p>・建物の間の狭い道路
-  <p>・密集した樹木の間    
+  <p>・密集した樹木の間   
+    <div style="text-align: right">
+    <img src="https://github.com/wanti-mu4/Watanabe-Mao/blob/main/building_1.png?raw=true"> 
+    </div>　　　　　　　　　　　　
   <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]    </h4>
   <p>・地下
   <p>・高架の下
