--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div style="text-align: right">
     <img src="https://github.com/wanti-mu4/Watanabe-Mao/blob/main/building_1.png?raw=true"> 
     </div>
-    　　　　　　　　　　　　　　　　　　　　　　　　　　<p>[3]
+    　　　　　　　　　　　　　　　　　　　　　　　　　　[3]
   <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所[1]    </h4>
   <p>・地下
   <p>・高架の下
@@ -34,7 +34,7 @@
 <p>[1] SONY ヘルプガイド　GPSについて　2014　 https://www.sony.jp/ServiceArea/impdf/pdf/45306860M.w-JP/jp/contents/TP0000507871.html</p>
 [2] MAMORIO Biz 　GPSタグの欠点　BluetoothタグやBeaconとの違いとは？　2020
 https://mamorio.biz/blog/gps-and-bluetooth
-[3]アズビル株式会社  https://www.azbil.com/jp/product/building/service/__icsFiles/metafile/2021/03/09/building_1.png   
+<p>[3]アズビル株式会社  https://www.azbil.com/jp/product/building/service/__icsFiles/metafile/2021/03/09/building_1.png   
 
 
  </body>
