--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p>GPSは天気が悪い時は精度が落ちてしまう[2]。</p>
   <p>GPS衛星により約10ｍの誤差を生じる[1]。</p>
   <h2>課題：GPSを使用する時に電池の消費が激しいこと</h2>
-  <h3>要因：GPS衛星からの電波の速度は携帯電話のLTE回線より遅くGPS衛星から電波を受け取るのに時間がかかること</h3>
+  <h3>要因：GPS衛星からの電波の速度は携帯電話のLTE回線より遅くGPS衛星から電波を受け取るのに時間がかかること[2]</h3>
   <p>GPS衛星から電波を受け取るのに長い時間を要することで、時間がかかる分電池を多く消費する[2]。</p>
 　<h3>参考文献</h3>
 <p>[1] SONY ヘルプガイド　GPSについて　2014　 https://www.sony.jp/ServiceArea/impdf/pdf/45306860M.w-JP/jp/contents/TP0000507871.html</p>
