--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <p>・密集した樹木の間[1]   
     <div style="text-align: right">
     <img src="https://github.com/wanti-mu4/Watanabe-Mao/blob/main/building_1.png?raw=true><title＝"[3]"> 
-    </div>
-                                                                                                                                         [3]
+                                                                                                      </div>
+                                                                                                         <div style="text-align: right">[3]</div>
   <h4>磁気や電波を発生するものが近くにあることで電波が届きにくくなる場所    </h4>
   <p>・地下[1]
   <p>・高架の下[1]
